horizontal jumping button fixed

--- a/src/common.blocks/button-section/styl/button-section.styl
+++ b/src/common.blocks/button-section/styl/button-section.styl
@@ -27,9 +27,7 @@
 
   &__button
     margin-bottom 1.3rem
-
-    &:nth-child(-n+3)
-      margin-right 8%
+    width 50%
 
     &_size_small
       margin-top 0.769230769230769rem
